--- a/Code/Data inspection 2.ipynb
+++ b/Code/Data inspection 2.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "infrared-spectacular",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "incorrect-tournament",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "developed-sacrifice",
    "metadata": {},
    "outputs": [],
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "greater-benjamin",
    "metadata": {},
    "outputs": [],
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "boolean-counter",
    "metadata": {},
    "outputs": [
@@ -1973,7 +1973,7 @@
        "[20 rows x 1263 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "passing-tunnel",
    "metadata": {},
    "outputs": [
@@ -1994,7 +1994,7 @@
        "(array([1, 2, 3, 4], dtype=int64), array([23,  9, 15, 13], dtype=int64))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "seeing-naples",
    "metadata": {},
    "outputs": [
@@ -2015,7 +2015,7 @@
        "(32, 28)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,6 +2023,634 @@
    "source": [
     "23+9, 15+13"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "educated-vitamin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medians = data[data.columns[3:]].median().to_numpy().reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "military-jaguar",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vals = data[data.columns[3:]].to_numpy().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "accurate-storm",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = np.sqrt(((vals - medians)**2).mean(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "sexual-ceiling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = pd.Series(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "written-fields",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55      3.304387\n",
+       "34      4.322348\n",
+       "4       4.485291\n",
+       "53      5.541502\n",
+       "45      6.181598\n",
+       "26      8.298238\n",
+       "2       9.188627\n",
+       "7       9.558718\n",
+       "17      9.785610\n",
+       "16      9.872308\n",
+       "5       9.930361\n",
+       "39     10.097443\n",
+       "48     10.117773\n",
+       "37     10.398483\n",
+       "18     11.126562\n",
+       "38     11.198743\n",
+       "6      11.506816\n",
+       "54     11.774300\n",
+       "3      11.910967\n",
+       "35     12.124528\n",
+       "36     12.564199\n",
+       "28     12.644428\n",
+       "1      12.820744\n",
+       "30     12.968874\n",
+       "11     14.850541\n",
+       "58     16.358439\n",
+       "56     18.028624\n",
+       "40     18.231544\n",
+       "19     18.712023\n",
+       "57     19.128247\n",
+       "20     19.808479\n",
+       "14     20.656883\n",
+       "24     21.588087\n",
+       "46     22.983087\n",
+       "22     24.952666\n",
+       "42     25.143278\n",
+       "47     25.202850\n",
+       "25     26.271390\n",
+       "9      26.950824\n",
+       "31     27.003892\n",
+       "12     27.047983\n",
+       "0      29.412560\n",
+       "21     29.517140\n",
+       "15     29.872623\n",
+       "44     30.731999\n",
+       "32     30.778385\n",
+       "49     31.433595\n",
+       "33     31.565575\n",
+       "10     32.207169\n",
+       "50     33.871991\n",
+       "59     34.778114\n",
+       "8      35.547105\n",
+       "27     36.987147\n",
+       "52     42.575184\n",
+       "51     46.459666\n",
+       "29     53.349049\n",
+       "23     53.799329\n",
+       "43     54.601211\n",
+       "41     54.949763\n",
+       "13    108.082120\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "industrial-geology",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.095870296850883"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(((vals - medians)**2).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "textile-private",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60,)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(((vals - medians)**2).mean(axis=0)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "revised-oriental",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "kf = KFold(n_splits=10, random_state=42, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "unlikely-aircraft",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 13 36 45 54] [29.41, 9.93, 108.08, 12.56, 6.18, 11.77] 177.93 29.66\n",
+      "[12 33 46 48 50 57] [27.05, 31.57, 22.98, 10.12, 33.87, 19.13] 144.72 24.12\n",
+      "[ 3  6  8 17 31 52] [11.91, 11.51, 35.55, 9.79, 27.0, 42.58] 138.34 23.06\n",
+      "[ 4 19 34 40 43 58] [4.49, 18.71, 4.32, 18.23, 54.6, 16.36] 116.71 19.45\n",
+      "[ 9 15 25 27 30 56] [26.95, 29.87, 26.27, 36.99, 12.97, 18.03] 151.08 25.18\n",
+      "[11 16 24 26 32 55] [14.85, 9.87, 21.59, 8.3, 30.78, 3.3] 88.69 14.78\n",
+      "[ 1 29 37 41 44 53] [12.82, 53.35, 10.4, 54.95, 30.73, 5.54] 167.79 27.96\n",
+      "[ 2 21 23 35 39 47] [9.19, 29.52, 53.8, 12.12, 10.1, 25.2] 139.93 23.32\n",
+      "[10 18 20 22 49 59] [32.21, 11.13, 19.81, 24.95, 31.43, 34.78] 154.31 25.72\n",
+      "[ 7 14 28 38 42 51] [9.56, 20.66, 12.64, 11.2, 25.14, 46.46] 125.66 20.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, test_index in kf.split(data):\n",
+    "    test_vals = []\n",
+    "    for idx in test_index:\n",
+    "        test_vals.append(round(scores[idx],2))\n",
+    "    print(test_index, test_vals, round(np.sum(test_vals),2), round(np.mean(test_vals),2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "differential-holiday",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55      951.216387\n",
+       "4      1130.907068\n",
+       "34     1144.556515\n",
+       "53     1413.474743\n",
+       "37     1651.790129\n",
+       "45     1683.013121\n",
+       "2      1725.781438\n",
+       "48     1749.687295\n",
+       "7      1763.489000\n",
+       "1      1795.636270\n",
+       "39     1811.695661\n",
+       "5      1863.040198\n",
+       "54     1934.403463\n",
+       "18     1956.190304\n",
+       "38     1971.819531\n",
+       "3      2060.103189\n",
+       "6      2060.973364\n",
+       "16     2318.943348\n",
+       "26     2332.152856\n",
+       "11     2365.786554\n",
+       "17     2386.256895\n",
+       "40     2470.586515\n",
+       "28     2604.278874\n",
+       "36     2629.612029\n",
+       "58     2764.769209\n",
+       "30     2841.146801\n",
+       "35     2915.624000\n",
+       "24     2965.925063\n",
+       "14     3106.102484\n",
+       "57     3288.974105\n",
+       "19     3364.126377\n",
+       "46     3398.498465\n",
+       "47     3489.995819\n",
+       "9      3683.975648\n",
+       "31     3808.342748\n",
+       "56     3811.061616\n",
+       "10     3831.772771\n",
+       "20     3836.573644\n",
+       "12     3942.501015\n",
+       "42     4221.790273\n",
+       "32     4271.225580\n",
+       "33     4343.356221\n",
+       "25     4355.610378\n",
+       "22     4550.680245\n",
+       "15     4598.331401\n",
+       "21     4618.679375\n",
+       "0      4624.859045\n",
+       "49     4721.867857\n",
+       "44     5041.685562\n",
+       "51     5064.779093\n",
+       "50     5245.941692\n",
+       "59     5313.476438\n",
+       "8      5481.187915\n",
+       "27     5609.403173\n",
+       "52     6823.331368\n",
+       "23     7208.271235\n",
+       "41     7254.458832\n",
+       "29     7799.714438\n",
+       "43     8013.177618\n",
+       "13    11689.584238\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2 = np.linalg.norm(vals-medians, axis=0, ord=1)\n",
+    "s2 = pd.Series(s2)\n",
+    "s2.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "original-burlington",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [4624.86, 1863.04, 11689.58, 2629.61, 1683.01, 1934.4] 24424.5 4070.75\n",
+      "1 [3942.5, 4343.36, 3398.5, 1749.69, 5245.94, 3288.97] 21968.96 3661.49\n",
+      "2 [2060.1, 2060.97, 5481.19, 2386.26, 3808.34, 6823.33] 22620.19 3770.03\n",
+      "3 [1130.91, 3364.13, 1144.56, 2470.59, 8013.18, 2764.77] 18888.14 3148.02\n",
+      "4 [3683.98, 4598.33, 4355.61, 5609.4, 2841.15, 3811.06] 24899.53 4149.92\n",
+      "5 [2365.79, 2318.94, 2965.93, 2332.15, 4271.23, 951.22] 15205.26 2534.21\n",
+      "6 [1795.64, 7799.71, 1651.79, 7254.46, 5041.69, 1413.47] 24956.76 4159.46\n",
+      "7 [1725.78, 4618.68, 7208.27, 2915.62, 1811.7, 3490.0] 21770.05 3628.34\n",
+      "8 [3831.77, 1956.19, 3836.57, 4550.68, 4721.87, 5313.48] 24210.56 4035.09\n",
+      "9 [1763.49, 3106.1, 2604.28, 1971.82, 4221.79, 5064.78] 18732.26 3122.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for _, test_index in kf.split(data):\n",
+    "    test_vals = []\n",
+    "    for idx in test_index:\n",
+    "        test_vals.append(round(s2[idx],2))\n",
+    "    print(i, test_vals, round(np.sum(test_vals),2), round(np.mean(test_vals),2))\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "dominican-password",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11689.5842381"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(vals-medians, ord=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "metropolitan-float",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d3 = data[data['compound']!='35-Dinitrosalicylicacid']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "august-comparative",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 13 34 45 53]\n",
+      "[ 3 12 25 47 49 57]\n",
+      "[ 4  6  8 17 31 36]\n",
+      "[19 30 44 50 54 55]\n",
+      "[ 9 15 16 24 26 27]\n",
+      "[11 32 33 41 52 56]\n",
+      "[ 1 21 29 37 40 43]\n",
+      "[ 2 23 35 39 46 48]\n",
+      "[ 7 10 18 20 22 58]\n",
+      "[14 28 38 42 51]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, test_index in kf.split(d3):\n",
+    "    print(test_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "cognitive-blend",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-11.549, 1078.0, 5.607911886507935, 0.3)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(medians), np.max(medians), np.mean(medians), np.median(medians)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "smooth-secret",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "solved-continuity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = MinMaxScaler(feature_range=(-1, 1))\n",
+    "X_sc = scaler.fit_transform(data[data.columns[3:]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "attached-reconstruction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = np.median(X_sc, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "reported-payment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scaled_scores = pd.Series(np.sqrt(((X_sc - m1)**2).mean(axis=1)))\n",
+    "scaled_scores = pd.Series(np.linalg.norm(X_sc-m1, axis=1, ord=0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "amber-number",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55    141502.511933\n",
+       "4     144617.401208\n",
+       "39    145830.138798\n",
+       "48    151367.057270\n",
+       "34    153178.610434\n",
+       "18    160259.168116\n",
+       "37    162810.523997\n",
+       "7     164633.080570\n",
+       "2     166204.026950\n",
+       "1     167258.139803\n",
+       "45    182867.814517\n",
+       "6     192100.039281\n",
+       "5     192693.542897\n",
+       "53    193552.251518\n",
+       "11    195412.250884\n",
+       "54    199893.622332\n",
+       "38    202957.543777\n",
+       "40    209750.684701\n",
+       "3     210456.704615\n",
+       "16    234210.886978\n",
+       "58    235931.169854\n",
+       "17    240308.014449\n",
+       "9     246989.783919\n",
+       "28    250703.861136\n",
+       "47    253636.338113\n",
+       "24    256863.378350\n",
+       "30    262177.317519\n",
+       "10    262766.156221\n",
+       "14    268831.781728\n",
+       "36    273682.440121\n",
+       "12    275522.501972\n",
+       "26    277563.155251\n",
+       "19    281683.687387\n",
+       "15    287524.724445\n",
+       "56    299815.568524\n",
+       "31    305943.281265\n",
+       "20    310080.459189\n",
+       "57    310408.422782\n",
+       "46    311664.224200\n",
+       "33    337038.188447\n",
+       "32    337975.558591\n",
+       "35    342084.020666\n",
+       "51    351534.010956\n",
+       "25    372763.890485\n",
+       "8     373509.755316\n",
+       "0     379208.444406\n",
+       "49    387688.158230\n",
+       "21    394763.914037\n",
+       "50    402598.160580\n",
+       "52    402794.164169\n",
+       "42    405787.773394\n",
+       "41    406812.753832\n",
+       "23    408757.210034\n",
+       "22    415084.056620\n",
+       "44    422599.693566\n",
+       "29    453195.893361\n",
+       "59    460800.945202\n",
+       "27    494008.993993\n",
+       "13    504318.427431\n",
+       "43    565851.937266\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_scores.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "earlier-contemporary",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(290047.1369597332, 274602.4710465498)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(scaled_scores), np.median(scaled_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "suspended-filing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104039.3315374338"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(scaled_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "silent-illinois",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(scaled_scores[scaled_scores > np.mean(scaled_scores) + np.std(scaled_scores)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "married-helping",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50    402598.160580\n",
+       "52    402794.164169\n",
+       "42    405787.773394\n",
+       "41    406812.753832\n",
+       "23    408757.210034\n",
+       "22    415084.056620\n",
+       "44    422599.693566\n",
+       "29    453195.893361\n",
+       "59    460800.945202\n",
+       "27    494008.993993\n",
+       "13    504318.427431\n",
+       "43    565851.937266\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_scores.sort_values()[-12:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tribal-bangladesh",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
